test/objects/good/iteminit.lat
class Person {
	int age;
}

class Superhero extends Person {
	string power;
}

int main() {
	Person p = new Superhero, a = new Person;
	a = new Superhero;
	return 0;
}
